--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,4 @@
 body {
-  padding-top: 5rem;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -11,4 +10,11 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.fixed-top-center{
+  position: fixed;
+  top: 10px;
+  left: 50%;
+  transform: translate(-50%,0);
 }
